--- a/pages/image_search.html
+++ b/pages/image_search.html
@@ -7,12 +7,17 @@
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
-    <div>
-        <a href="../index.html">Google Search</a>
+    <div class="wrapper">
+        <div class="img_navbar">
+            <a href="../index.html">Google Search</a>
+        </div>
+        <div class="main_section">
+            <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_light_color_272x92dp.png" alt="Logo de Google">
+        <form action="http://images.google.com/images?um=1&hl=en&safe=active&nfpr=1">
+            <input type="text" name="q" class="search">
+            <input type="submit" value="Google Search" class="btn">
+        </form>
+        </div>
     </div>
-    <form action="http://images.google.com/images?um=1&hl=en&safe=active&nfpr=1">
-        <input type="text" name="q">
-        <input type="submit" value="Google Search">
-    </form>
 </body>
 </html>
