Fix: CSS. Add: variables and mixins to SCSS

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <li><a href="./pages/image_search.html">Image Search</a></li>
             </ul>
         </div>
-        <div class="main_section">
+        <div class="main-section">
             <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_light_color_272x92dp.png" alt="Logo de Google">
             <form action="https://www.google.com/search">
                 <input type="text" name="q" class="search">
