--- a/pages/advanced_search.html
+++ b/pages/advanced_search.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <div class="wrapper">
-        <div class="adv_navbar">
+        <div class="adv-navbar">
             <a href="../index.html"><img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_light_color_272x92dp.png" alt="Logo de Google"></a>
             <a href="../index.html">Google Search</a>
         </div>
-        <div class="adv_section">
-            <div id="h1_cont">
+        <div class="adv-section">
+            <div id="h1-cont">
                 <h1>Advanced Search</h1>
             </div>
             <form action="https://www.google.com/search">
@@ -38,9 +38,9 @@
                     <input type="text" name="as_eq">
                 </div>
                 <div>
-                    <div id="empty_div">
+                    <div id="empty-div">
                     </div>
-                    <input type="submit" value="Advanced Search" id="adv_btn"/>
+                    <input type="submit" value="Advanced Search" id="adv-btn"/>
                 </div>
             </form>
         </div>
