--- a/pages/image_search.html
+++ b/pages/image_search.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <div class="wrapper">
-        <div class="img_navbar">
+        <div class="img-navbar">
             <a href="../index.html">Google Search</a>
         </div>
-        <div class="main_section">
+        <div class="main-section">
             <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_light_color_272x92dp.png" alt="Logo de Google">
         <form action="http://images.google.com/images?um=1&hl=en&safe=active&nfpr=1">
             <input type="text" name="q" class="search">
